# proc-macro-workshop

./: .gitignore
bitfield/: Cargo.toml
bitfield/impl/: Cargo.toml
bitfield/impl/src/: lib.rs
bitfield/src/: lib.rs
bitfield/tests/: 04-multiple-of-8bits.stderr  09-variant-out-of-range.stderr  11-bits-attribute-wrong.stderr
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
seq/: Cargo.toml
seq/src/: lib.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
