[package]
name = "bitfield"
version = "0.0.0"
edition = "2021"
autotests = false
publish = false

[[test]]
name = "tests"
path = "tests/progress.rs"

[[test]]
name = "my_test"
path = "tests/my_test.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
bitfield-impl = { path = "impl" }
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0.95", features = ["full", "extra-traits", "visit-mut"] }
